[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Nodes/alphabet.gd" type="Script" id=1]
[ext_resource path="res://Scripts/States/Options/OptionTypes/number_option_button.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Menus/arrow_buttons.png" type="Texture" id=3]

[node name="OptionButton" type="Control"]
script = ExtResource( 2 )

[node name="ValueEdit" type="Node2D" parent="."]

[node name="Value" type="Control" parent="ValueEdit"]
margin_left = 32.0
margin_right = 72.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="LeftButton" type="Sprite" parent="ValueEdit"]
position = Vector2( 16, 40 )
texture = ExtResource( 3 )
hframes = 4

[node name="RightButton" type="Sprite" parent="ValueEdit"]
position = Vector2( 72, 40 )
texture = ExtResource( 3 )
hframes = 4
frame = 2
